--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,10 @@
 body {
 
 	background-image: url("http://rockspringpreschool.com/wp-content/uploads/2015/03/georgia-tech-logo.jpg");
-	font-size: 24;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-position: center;
+	font-size: 48;
 	color: blue;
 	font-style: bold;
 }
@@ -20,23 +23,54 @@ padding-left: 25px;
 #timer {
 	background-color: blue;
 	color: red;
-	margin-right: 1300px;
+	margin-right: 2500px;
 	margin-left: 300px;
 	font-size: 48;
 }
 
 #answers {
 
-	
 	margin-left: 75px;
 	margin-right: 1000px;
 }
 
+.question {
+
+	background-color: white;
+	margin-right: 1700px;
+}
+
+#results { 
+	background: #dddada; 
+	color: 000000; 
+	padding: 3px; 
+	text-align: center; 
+	margin-left: 50px;
+	width: 200px; 
+	cursor: pointer; 
+	border: 1px solid gray; 
+}
+
+#results:hover { 
+	background: blue; 
+	color: #ffffff; 
+	padding: 3px; 
+	text-align: center; 
+	margin-left: 50px;
+	width: 200px; 
+	cursor: pointer; 
+	border: 1px solid gray;
+
+}
 
 
-#Submit {
+.nonAnswers, #category1, .allCorrect {
+	display: none;
+}
 
-	background-color: blue;
-	color: gold;
-	margin-left: 200px;
+.allCorrect {
+
+	position: absolute;
+	background: white;
+	color: blue;
 }
